fixes black apples, changes nav button styles, adds contrasting color

--- a/src/ComparisonContainer/ComparisonContainer.scss
+++ b/src/ComparisonContainer/ComparisonContainer.scss
@@ -9,6 +9,7 @@
     color: lighten(red, 15%);
     width: 100%;
     text-align: center;
+    font-size: 18pt;
   }
 }
 
