--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -2,7 +2,7 @@
 
 .Header {
   background: lighten(red, 15%);
-  box-shadow: 5px 5px 5px 0px darkgrey;
+  // box-shadow: 5px 5px 5px 0px darkgrey;
   // margin-bottom: 15px;
   display: flex;
   flex-direction: column;
